2009-01-19  Dan Williams  <dcbw@redhat.com>

	* nm-connection-editor.desktop.in
		- Use a more appropriate icon (preferences-system-network) instead
			of the wireless icon (bgo #563234)

2009-01-19  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* src/wireless-security/eap-method.h:
	* src/wireless-security/wireless-security.h:
	* src/polkit-helpers/polkit-gnome-action.c:
	* src/connection-editor/ce-page.h:
	* src/connection-editor/main.c:
	* src/connection-editor/mobile-wizard.c:
	* src/connection-editor/nm-connection-editor.c:
	* src/connection-editor/nm-connection-list.c:
	* src/connection-editor/nm-connection-list.h:
	* src/connection-editor/page-dsl.h:
	* src/connection-editor/page-ip4.h:
	* src/connection-editor/page-mobile.h:
	* src/connection-editor/page-ppp.h:
	* src/connection-editor/page-vpn.h:
	* src/connection-editor/page-wired-security.h:
	* src/connection-editor/page-wired.h:
	* src/connection-editor/page-wireless-security.h:
	* src/connection-editor/page-wireless.h:
	* src/ap-menu-item.h:
	* src/applet-device-cdma.c:
	* src/applet-device-gsm.c:
	* src/applet-device-wifi.c:
	* src/applet-device-wifi.h:
	* src/applet-device-wired.c:
	* src/applet-dialogs.c:
	* src/applet-dialogs.h:
	* src/applet.h:
	* src/wireless-dialog.c:
	* src/wireless-dialog.h: Cleared up gtk and glib includes
	to use only toplevel headers. Bug #564379.

2008-01-16  Tambet Ingo  <tambet@gmail.com>

	* src/gconf-helpers/nma-gconf-settings.c
		- (connection_changes_done, add_connection_real, connection_removed):
			fix handling of connections removed from GConf by external programs
			(bgo #557590)

2008-01-16  Dan Williams  <dcbw@redhat.com>

	* nm-connection-editor.c
	  nm-connection-editor.h
		- (nm_connection_editor_get_window): add accessor to editor GtkWindow

	* nm-connection-list.c
	  nm-connection-list.h
		- Pass XID of parent window to PolicyKit to ensure authorization windows
			are transient for their parent
		- Make error dialogs transient for the parent window
